syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package opennms.threshold;
option java_multiple_files = true;
option java_package = "org.opennms.horizon.metrics.threshold.proto";



message Annotations {
  string description = 1;
  string summary = 2;
}

message ThresholdAlert {
  string status = 1;
  map<string, string> labels  = 2;
  Annotations annotations = 3;
  string startsAt = 4;
  string endsAt = 5;
  string generatorURL = 6;
}



message ThresholdAlertData {
  string receiver = 1;
  string status = 2;
  repeated ThresholdAlert alerts = 3;
  map<string, string> commonLabels = 4;
  Annotations commonAnnotations = 5;
  string tenant_id = 6;
}

message MetricsThresholdAlertRule {

  repeated AlertRule alert_rules = 1;
  string rule_namespace = 2;
  string tenant_id = 3;
  string metric_threshold_name = 4;
  string alert_group = 5;
  Operation operation = 6;

}

message AlertRule {
  string alert_name = 1;
  string summary = 2;
  string description = 3;
  string duration = 4;
  string alert_expression = 5;
  string severity = 6;
  string condition = 7;
  string thresholdValue = 8;
}

enum Operation {
  ADD_RULE = 0;
  DELETE_RULE_OR_NAMESPACE = 1;
}
